plugins/opensearch-iouring/dist/native/include/opensearch_iouring.h

/* ============================================================================
 * Ring Management
 * ============================================================================ */

/**
 * Opaque ring handle.
 */
typedef struct osur_ring osur_ring_t;
/* ============================================================================
 * Completion Handling
 * ============================================================================ */

/**
 * Completion result structure.
 */
typedef struct {
    uint64_t user_data;  /* User data from the submission */
    int32_t  result;     /* Result: bytes transferred (>=0) or error (<0) */
    uint32_t flags;      /* Completion flags (reserved) */
} osur_completion_t;
/**
 * Wait for a completion with timeout.
 *
 * @param ring        The ring
 * @param completion  Output: completion result
 * @param timeout_ms  Timeout in milliseconds (0 = non-blocking, -1 = infinite)
 * @return 0 on success, -ETIMEDOUT on timeout, other negative on error
 */
int osur_wait_completion_timeout(osur_ring_t* ring,
                                  osur_completion_t* completion,
                                  int32_t timeout_ms);
/**
 * Poll for multiple completions (batch processing).
 *
 * @param ring        The ring
 * @param completions Output array for completions
 * @param max_count   Maximum completions to retrieve
 * @return Number of completions retrieved (>=0), or negative error code
 */
int osur_poll_completions(osur_ring_t* ring,
                          osur_completion_t* completions,
                          uint32_t max_count);
/**
 * Get the number of ready completions (without consuming them).
 *
 * @param ring The ring
 * @return Number of ready completions
 */
uint32_t osur_completion_ready(osur_ring_t* ring);
/* ============================================================================
 * Utility Functions
 * ============================================================================ */

/**
 * Allocate page-aligned memory suitable for direct I/O.
 *
 * @param size      Size in bytes
 * @param alignment Alignment (typically 4096 for direct I/O)
 * @return Pointer to allocated memory, or NULL on failure
 */
void* osur_alloc_aligned(size_t size, size_t alignment);
/**
 * Free memory allocated by osur_alloc_aligned().
 *
 * @param ptr Pointer to free (safe to pass NULL)
 */
void osur_free_aligned(void* ptr);