plugins/opensearch-iouring/src/main/generated/org/opensearch/index/store/iouring/ffi/opensearch_iouring_h.java


    /**
     * {@snippet lang=c :
     * int osur_wait_completion_timeout(osur_ring_t *ring, osur_completion_t *completion, int32_t timeout_ms)
     * }
     */
    public static int osur_wait_completion_timeout(MemorySegment ring, MemorySegment completion, int timeout_ms) {
        var mh$ = osur_wait_completion_timeout.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("osur_wait_completion_timeout", ring, completion, timeout_ms);
            }
            return (int)mh$.invokeExact(ring, completion, timeout_ms);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class osur_poll_completions {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            opensearch_iouring_h.C_INT,
            opensearch_iouring_h.C_POINTER,
            opensearch_iouring_h.C_POINTER,
            opensearch_iouring_h.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("osur_poll_completions");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int osur_poll_completions(osur_ring_t *ring, osur_completion_t *completions, uint32_t max_count)
     * }
     */
    public static FunctionDescriptor osur_poll_completions$descriptor() {
        return osur_poll_completions.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int osur_poll_completions(osur_ring_t *ring, osur_completion_t *completions, uint32_t max_count)
     * }
     */
    public static MethodHandle osur_poll_completions$handle() {
        return osur_poll_completions.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int osur_poll_completions(osur_ring_t *ring, osur_completion_t *completions, uint32_t max_count)
     * }
     */
    public static MemorySegment osur_poll_completions$address() {
        return osur_poll_completions.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int osur_poll_completions(osur_ring_t *ring, osur_completion_t *completions, uint32_t max_count)
     * }
     */
    public static int osur_poll_completions(MemorySegment ring, MemorySegment completions, int max_count) {
        var mh$ = osur_poll_completions.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("osur_poll_completions", ring, completions, max_count);
            }
            return (int)mh$.invokeExact(ring, completions, max_count);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class osur_completion_ready {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            opensearch_iouring_h.C_INT,
            opensearch_iouring_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("osur_completion_ready");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * uint32_t osur_completion_ready(osur_ring_t *ring)
     * }
     */
    public static FunctionDescriptor osur_completion_ready$descriptor() {
        return osur_completion_ready.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * uint32_t osur_completion_ready(osur_ring_t *ring)
     * }
     */
    public static MethodHandle osur_completion_ready$handle() {
        return osur_completion_ready.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * uint32_t osur_completion_ready(osur_ring_t *ring)
     * }
     */
    public static MemorySegment osur_completion_ready$address() {
        return osur_completion_ready.ADDR;
    }

    /**
     * {@snippet lang=c :
     * uint32_t osur_completion_ready(osur_ring_t *ring)
     * }
     */
    public static int osur_completion_ready(MemorySegment ring) {
        var mh$ = osur_completion_ready.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("osur_completion_ready", ring);
            }
            return (int)mh$.invokeExact(ring);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class osur_alloc_aligned {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            opensearch_iouring_h.C_POINTER,
            opensearch_iouring_h.C_LONG,
            opensearch_iouring_h.C_LONG
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("osur_alloc_aligned");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void *osur_alloc_aligned(size_t size, size_t alignment)
     * }
     */
    public static FunctionDescriptor osur_alloc_aligned$descriptor() {
        return osur_alloc_aligned.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void *osur_alloc_aligned(size_t size, size_t alignment)
     * }
     */
    public static MethodHandle osur_alloc_aligned$handle() {
        return osur_alloc_aligned.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void *osur_alloc_aligned(size_t size, size_t alignment)
     * }
     */
    public static MemorySegment osur_alloc_aligned$address() {
        return osur_alloc_aligned.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void *osur_alloc_aligned(size_t size, size_t alignment)
     * }
     */
    public static MemorySegment osur_alloc_aligned(long size, long alignment) {
        var mh$ = osur_alloc_aligned.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("osur_alloc_aligned", size, alignment);
            }
            return (MemorySegment)mh$.invokeExact(size, alignment);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class osur_free_aligned {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            opensearch_iouring_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("osur_free_aligned");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void osur_free_aligned(void *ptr)
     * }
     */
    public static FunctionDescriptor osur_free_aligned$descriptor() {
        return osur_free_aligned.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void osur_free_aligned(void *ptr)
     * }
     */
    public static MethodHandle osur_free_aligned$handle() {
        return osur_free_aligned.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void osur_free_aligned(void *ptr)
     * }
     */
    public static MemorySegment osur_free_aligned$address() {
        return osur_free_aligned.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void osur_free_aligned(void *ptr)
     * }
     */
    public static void osur_free_aligned(MemorySegment ptr) {
        var mh$ = osur_free_aligned.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("osur_free_aligned", ptr);
            }
            mh$.invokeExact(ptr);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }
}

